# evolution-algorithms-labs

./: CMakeLists.txt
cpp/: lab1_monte_carlo.cpp  lab2_dfs.cpp  lab3_bfs.cpp  lab4_gray.cpp  lab5_random.cpp  lab_template.cpp
dependencies/menu/: menu.cpp  menu.h
include/field/: alphabet.h  conditional_field.h  field.h  gray_field.h  vector.h
include/solver/: base_hood.h  base_solver.h  hill_climbing.h  monte_carlo.h  utils.h  verbose.h
include/utils/: scorers.h  type_helper.h  utils.h
python/: lab6.py  lab7.py  lab8.py  lab9.py  utils.py
python/datasets/: knackpack_dataset.txt  tsp_dataset.txt
python/lab10/: concept.md  console.py  smt.py  t2.py  test.py
python/lab10/algorithms/: algorithm.py  heuristic_methods.py  individual.py  mutations.py  population_updaters.py  utils.py
python/lab10/algorithms/genetic_politics/: crossover_politics.py  genetic_politics.py  mutation_politics.py  selection_politics.py
python/lab10/population_dumps/: DANTZIG42_greedy  DANTZIG42_monte  att48_greedy  att48_monte
python/lab10/utils/: utils.py
scripts/: build_all.sh
